--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ body {
     box-shadow: none;
 }
 
+
 .search-bar input[type="search"]::placeholder {
     color: rgba(255, 255, 255, 0.7);
 }
@@ -123,6 +124,44 @@ body {
 
 .no-data-icon {
     margin-top: calc((40vh) / 2);
+    padding-bottom: calc((55vh) / 2);
+}
+
+.movie-image {
+    border-radius: 1rem;
+    margin-top: 1rem;
+    height: 300px;
+}
+
+
+.movie-card {
+    margin-right: 2rem;
+    margin-bottom: 2rem;
+    box-shadow: 5px 5px 10px 1px black;
+}
+
+.warp-hide-text {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.detail-btn {
+    display: block;
+    width: 100%;
+    border: 1px solid black;
+    background-color: #eee;
+    border-radius: 1rem;
+    
+}
+
+.detail-btn:hover {
+    background-color: white;
+    box-shadow: 0 0 10px 1px black;
+}
+
+.detail-btn:active {
+    background-color: #cccccc;
 }
 
 @media (min-width: 768px) {
