--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,84 @@ body {
     background-color: #cccccc;
 }
 
+#cancel-btn {
+    display: none;
+    border: 1px solid black;
+    background-color: white;
+    color: red;
+    border-radius: 1rem;
+    padding: 0.3rem 0.5rem;
+}
+
+#cancel-btn:hover {
+    box-shadow: 0 0 10px 2px red;
+    background-color: #eee;
+}
+
+#cancel-btn:active {
+    box-shadow: 0 0 20px 5px red;
+    background-color: #cccccc;
+}
+
+.detail-img {
+    width: 300px;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 1rem;
+    margin: auto;
+}
+
+.detail-texts {
+    margin: auto;
+    margin-top: 1.5rem;
+    width: 100%;
+}
+
+.loading-modal {
+    display:    none;
+    position:   fixed;
+    z-index:    1000;
+    top:        0;
+    left:       0;
+    height:     100%;
+    width:      100%;
+    backdrop-filter: blur(5px);
+    color: red;
+}
+
+.custom-spiner {
+    width: 48px;
+    height: 48px;
+    background: #FFF;
+    border-radius: 50%;
+    display: inline-block;
+    position: relative;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+.custom-spiner::after {
+  content: '';  
+  box-sizing: border-box;
+  position: absolute;
+  left: 6px;
+  top: 10px;
+  width: 12px;
+  height: 12px;
+  color: #FF3D00;
+  background: currentColor;
+  border-radius: 50%;
+  box-shadow: 25px 2px, 10px 22px;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+} 
+
 @media (min-width: 768px) {
     .the-nav {
         height: 300px;
@@ -173,5 +251,19 @@ body {
     }
     .nav-bg img {
         height: 260px;
+    }
+}
+
+@media (min-width: 1000px) {
+    .detail-img {
+        float: left;
+        margin: 0;
+        margin-left: 1rem;
+    }
+    .detail-texts {
+        float: left;
+        margin: 0;
+        margin-left: 1rem;
+        width: 70%;
     }
 }
